fix: yalb(alignment): refine quote content width

--- a/components/02-molecules/pull-quote/_yds-pull-quote.scss
+++ b/components/02-molecules/pull-quote/_yds-pull-quote.scss
@@ -11,16 +11,6 @@ blockquote {
   @include tokens.spacing-page-inner;
 }
 
-.pull-quote__inner {
-  [data-component-alignment='left'][data-pull-quote-style='bar-left'] & {
-    padding-left: var(--size-spacing-6);
-  }
-
-  [data-component-alignment='left'][data-pull-quote-style='bar-right'] & {
-    padding-right: var(--size-spacing-6);
-  }
-}
-
 .pull-quote__figure {
   [data-pull-quote-style='bar-left'] & {
     padding-left: var(--size-spacing-6);
@@ -50,7 +40,9 @@ blockquote {
   }
 
   [data-component-alignment='left'] & {
-    max-width: var(--size-component-layout-width-content);
+    max-width: calc(
+      var(--size-component-layout-width-content) - var(--size-spacing-6)
+    );
   }
 }
 
